--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "express": "*",
     "grunt": "^0.4.5",
     "http": "*",
-    "body-parser": "*"
+    "body-parser": "*",
+    "socket.io": "1.4.8"
   }
 }
